# pmlst

./: .dockerignore  .gitignore  Dockerfile  INSTALL_DB  README.md  README.rst  download-db.sh  environment-dev.yml  pMLST-1.4.pl  pmlst.pl  pmlst.py  pmlst_schemes  pyproject.toml
Output/: Hit_in_genome_seq.fsa  pMLST_allele_seq.fsa  standard_output.txt
conda/: build.sh  download-db.sh  meta.yaml
database/: abaumannii.fsa  abaumannii.txt.clean  abaumannii_2.clpx  abaumannii_2.fsa  abaumannii_2.txt.clean  achromobacter.fsa  achromobacter.txt.clean  aeromonas.fsa  aeromonas.txt.clean  aphagocytophilum.clpx  aphagocytophilum.fsa  aphagocytophilum.txt.clean  arcobacter.fsa  arcobacter.txt.clean  bburgdorferi.fsa  bburgdorferi.txt.clean  bcc.fsa  bcc.txt.clean  bcereus.fsa  bcereus.txt.clean  bhyodysenteriae.fsa  bhyodysenteriae.txt.clean  bifidobacterium.fsa  bifidobacterium.txt.clean  bintermedia.fsa  bintermedia.txt.clean  bordetella.clpx  bordetella.fsa  bordetella.txt.clean  borrelia.fsa  borrelia.txt.clean  bpseudomallei.fsa  bpseudomallei.txt.clean  calbicans.txt.clean  campylobacter.clpx  campylobacter.fsa  campylobacter.txt.clean  cconcisus.fsa  cdifficile.clpx  cdifficile.fsa  (+158 more)
galaxy/data_manager/: .shed.yml  data_manager_conf.xml
galaxy/data_manager/pmlst_database/: macros.xml  pmlst_database_data_manager.py  pmlst_database_data_manager.xml
galaxy/tool/: .shed.yml  macros.xml  pmlst.xml  tool_data_table_conf.xml.test
galaxy/tool/test-data/: README.md  pmlst_db.loc
galaxy/tool/tool-data/: pmlst_db.loc.sample
pMLST/: .gitignore  Changes  MANIFEST  Makefile.PL  README
pMLST/lib/: pMLST.pm
pMLST/t/: pMLST.t
src/: cli.py
src/pmlst/: cli.py  core.py  database.py  db_setup.py  methods.py  output.py  utils.py
